--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -10,6 +10,10 @@
   <body>
     <div class="container">
       <h1>Vacation Suggester</h1>
+      <img src="images/hawaii.jpg" alt="A sea turtle on a Hawaiian beach.">
+      <img src="images/joshua_tree.jpg" alt="Joshua Tree desert landscape at sunset.">
+      <img src="images/los_angeles.jpg" alt="The Los Angeles County Museum of Art building from outside">
+      <img src="images/Columbia_River_Gorge.jpg" alt="The Columbia River Gorge landscape.">
       <p></p>
     </div>
   </body>
