--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -10,16 +10,23 @@
   <body>
     <div class="container">
       <h1>Vacation Suggester</h1>
-      <p>Do you like warm weather?</p>
       <p>Do you like to sand, sun, and swimming?</p>
+      <p>Do you like hot, dry weather?</p>
       <p>Do you like to hiking and camping?</p>
       <p>Do you like Japanese food?</p>
       <p>Would you enjoy spending hours at modern and contemporaty art museums?</p>
-      <img src="images/hawaii.jpg" alt="A sea turtle on a Hawaiian beach.">
-      <img src="images/joshua_tree.jpg" alt="Joshua Tree desert landscape at sunset.">
-      <img src="images/los_angeles.jpg" alt="The Los Angeles County Museum of Art building from outside">
-      <img src="images/Columbia_River_Gorge.jpg" alt="The Columbia River Gorge landscape.">
-      <p></p>
-    </div>
+        <div id="swim">
+          <img src="images/hawaii.jpg" alt="A sea turtle on a Hawaiian beach.">
+        </div>
+          <div id="hot">
+            <img src="images/joshua_tree.jpg" alt="Joshua Tree desert landscape at sunset.">
+          </div>
+            <div id="hike">
+              <img src="images/Columbia_River_Gorge.jpg" alt="The Columbia River Gorge landscape.">
+            </div>
+              <div id="museum">
+                <img src="images/los_angeles.jpg" alt="The Los Angeles County Museum of Art building from outside">
+              <div>
+      </div>
   </body>
 </html>
