add palms photo and colored text

--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -10,6 +10,8 @@
   <body>
     <div class="container">
       <h1>Vacation Suggester</h1>
+      <img src="images/palms.jpg" alt="A sunny beach with many palm trees.">
+      <br></br>
       <p>Do you like to sand, sun, and swimming?</p>
       <p>Do you like hot, dry weather?</p>
       <p>Do you like to hiking and camping?</p>
