centered all images and added border radius

--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -12,12 +12,13 @@
       <h1>Vacation Suggester</h1>
       <img class="displayed" src="images/palms.jpg" alt="A sunny beach with many palm trees.">
       <br></br>
-      <h3 class="q1">Do you like to sand, sun, and swimming?</h3>
+      <h3>Do you like to sand, sun, and swimming?</h3>
       <h3>Do you like hot, dry weather?</h3>
       <h3>Do you like to hiking and camping?</h3>
       <h3>Do you like Japanese food?</h3>
       <h3>Would you enjoy spending hours at modern and contemporaty art museums?</h3>
         <div id="swim">
+          <h4>You're going to: Hawaii!</h4>
           <img src="images/hawaii.jpg" alt="A sea turtle on a Hawaiian beach.">
         </div>
         <div id="hot">
