--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -12,22 +12,36 @@
       <h1>Vacation Suggester</h1>
       <img class="displayed" src="images/palms.jpg" alt="A sunny beach with many palm trees.">
       <br></br>
-      <h3>Do you like to sand, sun, and swimming?</h3>
+      <form id="userInput">
+        <div id="radio-form">
+          <h3>Do you like spending time in nature or in culture rich cities?</h3>
+          <div class="radio">
+            <label><input type="radio" name="setting" id="setting" value ="nature">Nature</label>
+          </div>
+        <div class="radio">
+          <label><input type="radio" name="setting" id="setting" value ="city">City</label>
+       </div>
+      </div>
       <h3>Do you like hot, dry weather?</h3>
       <h3>Do you like to hiking and camping?</h3>
       <h3>Do you like Japanese food?</h3>
       <h3>Would you enjoy spending hours at modern and contemporaty art museums?</h3>
-        <div id="swim">
-          <h4>You're going to: Hawaii!</h4>
+       </div>
+     </form>
+        <div id="hawaii">
+          <h4>Go to Hawaii!</h4>
           <img src="images/hawaii.jpg" alt="A sea turtle on a Hawaiian beach.">
         </div>
-        <div id="hot">
+        <div id="jtree">
+          <h4>Go to Joshua Tree!</h4>
           <img src="images/joshua_tree.jpg" alt="Joshua Tree desert landscape at sunset.">
         </div>
-        <div id="hike">
+        <div id="gorge">
+          <h4>Go to the Columbia Gorge!</h4>
           <img src="images/Columbia_River_Gorge.jpg" alt="The Columbia River Gorge landscape.">
         </div>
-        <div id="museum">
+        <div id="losangeles">
+          <h4>Go to Los Angeles</h4>
           <img src="images/los_angeles.jpg" alt="The Los Angeles County Museum of Art building from outside">
         <div>
       </div>
