added radio form with selectors to all questions

--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -14,18 +14,40 @@
       <br></br>
       <form id="userInput">
         <div id="radio-form">
-          <h3>Do you like spending time in nature or in culture rich cities?</h3>
+          <h3>Do you like spending time in nature or in culture-rich cities?</h3>
           <div class="radio">
-            <label><input type="radio" name="setting" id="setting" value ="nature">Nature</label>
+            <label><input type="radio" name="setting1" id="setting1" value ="nature">In nature</label>
           </div>
         <div class="radio">
-          <label><input type="radio" name="setting" id="setting" value ="city">City</label>
+          <label><input type="radio" name="setting1" id="setting1" value ="city">In cities</label>
        </div>
-      </div>
-      <h3>Do you like hot, dry weather?</h3>
-      <h3>Do you like to hiking and camping?</h3>
-      <h3>Do you like Japanese food?</h3>
-      <h3>Would you enjoy spending hours at modern and contemporaty art museums?</h3>
+       <h3>Do you prefer palm trees or pine trees?</h3>
+       <div class="radio">
+         <label><input type="radio" name="trees" id="trees" value ="palm">Palm trees</label>
+       </div>
+       <div class="radio">
+         <label><input type="radio" name="trees" id="trees" value ="pine">Pine trees</label>
+       </div>
+       <h3>Do you like to hiking and camping?</h3>
+       <div class="radio">
+         <label><input type="radio" name="yesno1" id="yesno1" value ="yes">Yes</label>
+       </div>
+       <div class="radio">
+         <label><input type="radio" name="yesno1" id="yesno1" value ="no">No</label>
+       </div>
+       <h3>Do you prefer the sparce beauty of the desert or lush green landscapes?</h3>
+       <div class="radio">
+         <label><input type="radio" name="setting2" id="setting2" value ="desert">Sparce desert beauty</label>
+       </div>
+       <div class="radio">
+         <label><input type="radio" name="setting2" id="setting2" value ="lush">Lush green landscape</label>
+       </div>
+       <h3>Would you enjoy spending hours at modern and contemporaty art museums?</h3>
+       <div class="radio">
+         <label><input type="radio" name="art" id="art" value ="definitely">Definitely</label>
+       </div>
+       <div class="radio">
+         <label><input type="radio" name="art" id="art" value ="nope">Nope</label>
        </div>
      </form>
         <div id="hawaii">
