change html on all questions to have a drop down response selector instead of radio buttons

--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -18,35 +18,27 @@
           <option value="nature">In Nature</option>
           <option value="city">In Cultural Centers</option>
         </select><br />
-       <h3>Do you prefer palm trees or pine trees?</h3>
-       <div class="radio">
-         <label><input type="radio" name="trees" id="trees1" value ="palm">Palm trees</label>
-       </div>
-       <div class="radio">
-         <label><input type="radio" name="trees" id="trees2" value ="pine">Pine trees</label>
-       </div>
-       <h3>Do you like to hiking and camping?</h3>
-       <div class="radio">
-         <label><input type="radio" name="yesno1" id="yesno1" value ="yes">Yes</label>
-       </div>
-       <div class="radio">
-         <label><input type="radio" name="yesno1" id="yesno2" value ="no">No</label>
-       </div>
-       <h3>Do you prefer the sparce beauty of the desert or lush green landscapes?</h3>
-       <div class="radio">
-         <label><input type="radio" name="setting2" id="dry" value ="desert">Sparce desert beauty</label>
-       </div>
-       <div class="radio">
-         <label><input type="radio" name="setting2" id="humid" value ="lush">Lush green landscape</label>
-       </div>
-       <h3>Would you enjoy spending hours at modern and contemporaty art museums?</h3>
-       <div class="radio">
-         <label><input type="radio" name="art" id="ja" value ="definitely">Definitely</label>
-       </div>
-       <div class="radio">
-         <label><input type="radio" name="art" id="nein" value ="nope">Nope</label>
-       </div>
-       <button type="submit" class="btn"> Click to view your vacation suggestion</button>
+       <label for id="trees">Do you prefer palm trees or pine trees?</label>
+       <select id="trees" class=form-control>
+         <option value="palm">Palm Trees</option>
+         <option value="pine">Pine Trees</option>
+       </select><br />
+       <label for id="yesno1">Do you like to hiking and camping?</label>
+       <select id="yesno1" class=form-control>
+         <option value="yes">Yes</option>
+         <option value="no">No</option>
+       </select><br />
+       <label for id=setting2>Do you prefer the sparce beauty of the desert or lush green landscapes?</label>
+       <select id="setting2" class=form-control>
+         <option value="desert">The sparce beauty of the desert</option>
+         <option value="lush">Lush green landscapes</option>
+       </select><br />
+       <label for id=museums>Would you enjoy spending hours at modern and contemporaty art museums?</label>
+       <select id="museums" class=form-control>
+         <option value="oui">Yes!</option>
+         <option value="non">No, thanks!</option>
+       </select><br />
+      <button type="submit" class="btn"> Click here then scroll down the page to see your result</button>
      </form>
         <div id="hawaii">
           <h4>Go to Hawaii!</h4>
