have conditional statements set and working for columbia gorge vacay suggestion in jQ

--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -23,8 +23,8 @@
          <option value="palm">Palm Trees</option>
          <option value="pine">Pine Trees</option>
        </select><br />
-       <label for id="yesno1">Do you like to hiking and camping?</label>
-       <select id="yesno1" class=form-control>
+       <label for id="hiking">Do you like to hiking and camping?</label>
+       <select id="hiking" class=form-control>
          <option value="yes">Yes</option>
          <option value="no">No</option>
        </select><br />
