fix css to remove radio selector styling

--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -38,7 +38,7 @@
          <option value="oui">Yes!</option>
          <option value="non">No, thanks!</option>
        </select><br />
-      <button type="submit" class="btn"> Click here then scroll down the page to see your result</button>
+      <button type="submit" class="btn"> Click here then scroll down to see your result!</button>
      </form>
         <div id="hawaii">
           <h4>Go to Hawaii!</h4>
