have hawaii show as else statement

--- a/vacation-suggester.html
+++ b/vacation-suggester.html
@@ -5,23 +5,23 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.12.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Vacation Suggester</title>
+    <title>Patricia's Vacation Suggester</title>
   </head>
   <body>
     <div class="container">
-      <h1>Vacation Suggester</h1>
+      <h1>Patricia's Vacation Suggester</h1>
       <img class="displayed" src="images/palms.jpg" alt="A sunny beach with many palm trees.">
       <br></br>
       <form id="userInput">
         <label for ="setting1">Do you like spending time in nature or in culture-rich cities?</label>
         <select id="setting1" class=form-control>
-          <option value="nature">In Nature</option>
-          <option value="city">In Cultural Centers</option>
+          <option value="nature">In nature</option>
+          <option value="city">In cultural centers</option>
         </select><br />
        <label for id="trees">Do you prefer palm trees or pine trees?</label>
        <select id="trees" class=form-control>
-         <option value="palm">Palm Trees</option>
-         <option value="pine">Pine Trees</option>
+         <option value="palm">Palm trees</option>
+         <option value="pine">Pine trees</option>
        </select><br />
        <label for id="hiking">Do you like to hiking and camping?</label>
        <select id="hiking" class=form-control>
